# TEngine

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.599b5f2  CMakeLists.txt.user.5b3d971  CMakeLists.txt.user.b665349  Makefile  README.me  cmake_install.cmake  compile.sh  execute.sh  helloopenGL.cbp  helloopenGL_automoc.cpp  moc_mainwindow.cpp  moc_myopenglwidget.cpp  ui_mainwindow.h
Shaders/: fragment_errors_shader.glsl  fragment_fbo_test.glsl  fragment_light_shader.glsl  fragment_phong_light_shader.glsl  fragment_uniform_colorshader.glsl  fragment_weight.glsl  frg_test.glsl  vertex_errors.glsl  vertex_phong_shader.glsl  vertex_phong_shader_new.glsl  vertex_shader.glsl  vertex_wheight.glsl
Shaders/SSAO/: fragment_ssao.glsl  fragment_ssao_geometry.glsl  fragment_ssao_lighting.glsl  vertex_ssao_geometry.glsl
helloopenGL_autogen/: moc_predefs.h  mocs_compilation.cpp
helloopenGL_autogen/G7DWN2XDYA/: moc_hellospheres.cpp
helloopenGL_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_myopenglwidget.cpp
src/: glassert.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  opengl_stuff.h  scene.cpp  scene.h
src/3DObjectParser/: objectloader.cpp  objectloader.h  objparser.cpp  objparser.h
src/Animation/: Animation.cpp  Animation.h
src/BRDF/: brdf.cpp  brdf.h
src/Bone/: bone.cpp  bone.h
src/Materials/: Imported3DModel.cpp  Imported3DModel.h  bspline.cpp  bspline.h  bsplinepatch.cpp  bsplinepatch.h  composed3dobject.cpp  composed3dobject.h  cylinder.cpp  cylinder.h  light.h  material.h  material3DObject.cpp  material3DObject.h  spheres.cpp  spheres.h
src/MeshManager/: meshmanager.cpp  meshmanager.h
src/RenderObject/: gbuffer.cpp  gbuffer.h  renderobject.cpp  renderobject.h  ssaoblurbuffer.cpp  ssaoblurbuffer.h  ssaobuffer.cpp  ssaobuffer.h  testbuffer.cpp  testbuffer.h
src/ShaderManager/: shaderloader.cpp  shaderloader.h  shadermanager.cpp  shadermanager.h
src/Texture/: texture.cpp  texture.h
src/hello_3dObjScene/: Scene3DObjects.cpp  Scene3DObjects.cpp.autosave  Scene3DObjects.h
src/hello_camera/: camera.h  hellocamera.cpp  hellocamera.h
src/hello_spheres/: hellospheres.cpp  hellospheres.h
src/hello_triangles/: hellotriangles.cpp  hellotriangles.h
